ex 11 first commit